** Feast of Aptitude (Cleric, Mage) - High
** Feast of Expertise (Warrior, Rogue) - High
** Kelari Expedition Cherry Cake (Mage, Cleric) - Medium
** Kelari Expedition Chocolate Cake (Warrior, Rogue) - Medium
** Farclan Cherry Cake (Mage, Cleric) - Medium
** Farclan Chocolate Cake (Warrior, Rogue) - Medium
* Weapon Stones
** Burning Powerstone (Mage, Cleric) - High
** Flaring Glyph (Mage, Cleric) - Medium
** Exquisite Whetstone (Warrior, Rogue) - High
** Fine Whetstone (Warrior, Rogue) - Medium
* Potions/Vials
** Herioc Brightsurge Vial (Mage, Cleric) - High
** Herioc Powersurge Vial (Warrior, Rogue) - High
** Vial of Earth Resistance (All) - High
** Mighty Powersurge Vial (Warrior, Rogue) - Medium
* Other/Armor
** Performance Insoles (All) - High
** Cusioned Insoles (All) - High
** Planar Protection (All) - High
** Thick Armor Plating (Warrior, Rogue, Cleric : Tank) - High

System
* New: Added a new slash command /kbmbuffs. You can macro this with %t or manually type a name to return a list of buffs with KBM ID's on that Unit. (Players or NPC's)
* Change: Ability IDs have been changed to the new format for Rift 1.9 and above. This will cause compatibility issues with older KBMs.
* Change: Buff Add events triggered for already cached buffs are now ignored.
* Change: Updated LibSRM to 1.2.0 which now includes LibUnitChange 2.1
* Removed: Global reference to bDetails in Buff Remove handlers.
* Removed: Global reference to TriggerObj in Buff Remove handlers.
* Removed: Global reference to TriggerObj in Buff Add handlers.
* Removed: Global reference to TriggerMod in Buff Add handlers.

Cast Bars
* Change: Addressed an issue where same name abilities progressing from Cast to Channel would display end-cast highlights for Rift Style bars.
* Fixed: Forced the Castbar Anchor to be hidden when the Options screen is closed during an encounter.

CPU Monitor
* New: Added support for Ready Check CPU tracking.

Tank-Swap