@@ -31,12 +31,18 @@ Ready Check Available Tracking
 ** Farclan Chocolate Cake (Warrior, Rogue) - Medium
 * Weapon Stones
 ** Burning Powerstone (Mage, Cleric) - High
+** Ancient Burning Powerstone (Mage, Cleric) - High
 ** Flaring Glyph (Mage, Cleric) - Medium
+** Exquisite Oilstone (Warrior, Rogue) - High
+** Ancient Equisite Oilstone (Warrior, Rogue) - High
 ** Exquisite Whetstone (Warrior, Rogue) - High
 ** Fine Whetstone (Warrior, Rogue) - Medium
+** Lightning Glyph (Warrior, Rogue) - Medium
 * Potions/Vials
 ** Herioc Brightsurge Vial (Mage, Cleric) - High
+** Ancient Herioc Brightsurge Vial (Mage, Cleric) - High
 ** Herioc Powersurge Vial (Warrior, Rogue) - High
+** Ancient Herioc Powersurge Vial (Warrior, Rogue) - High
 ** Vial of Earth Resistance (All) - High
 ** Mighty Powersurge Vial (Warrior, Rogue) - Medium
 * Other/Armor
@@ -44,6 +50,7 @@ Ready Check Available Tracking
 ** Cusioned Insoles (All) - High
 ** Planar Protection (All) - High
 ** Thick Armor Plating (Warrior, Rogue, Cleric : Tank) - High
+** Poisonous Coating (Warrior, Rogue) - High
 
 System
 * New: Added a new slash command /kbmbuffs. You can macro this with %t or manually type a name to return a list of buffs with KBM ID's on that Unit. (Players or NPC's)
